/*
 * record_query_runtime.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2024 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.planprotos;
import "google/protobuf/descriptor.proto";
import "record_metadata.proto";
import "record_query_plan.proto";

option java_outer_classname = "RecordQueryRuntimeProto";
option java_multiple_files = true;

message PQueryResult {
  oneof datum {
    PComparableObject primitive = 1;
    bytes complex = 2;
  }
}

message PTempTable {
  repeated PQueryResult bufferItems = 2;
}
